--- a/site-lisp/template/default.html
+++ b/site-lisp/template/default.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 !§!(if buffer-file-coding-system
-      (concat 
-       "<meta http-equiv=\"Content-type\" content=\"text/html; charset=" 
+      (concat
+       "<meta http-equiv=\"Content-type\" content=\"text/html; charset="
         (symbol-name (coding-system-get buffer-file-coding-system 'mime-charset)) "\" />"))!§!
 <meta name="Author" content="!§!pi-template-author!§!"/>
 <title>!§!(skeleton-read "Enter title: ")!§!</title>
